--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <script src="https://kit.fontawesome.com/8ae63aa6bb.js" crossorigin="anonymous"></script>
   <!-- Box Icon -->
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
